🐛fix: squares do not fit in the container

--- a/style.css
+++ b/style.css
@@ -14,20 +14,28 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 3px red solid;
-    /* width: 960px;
-    height: 960px; */
+    border: 1px red solid;
+    width: 400px;
+    height: 400px;
     
 }
 
+
 .line{
+    
     display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    /* border: solid 5px purple; */
+    background-color: yellow;
+}
+
+.square{
+    display: flex;
+    width: 100%;
+    height: 100%;
     background-color: white;
-    padding: 20px;
     border: solid 1px blue;
 }
 
-.colum {
-    display: flex;
-    background-color: yellow;
-}
